--- a/NLP_Assignment_1-2.ipynb
+++ b/NLP_Assignment_1-2.ipynb
@@ -72,8 +72,8 @@
       ],
       "source": [
         "# Assignment 2: Text Classification with Bag-of-Words & Naive Bayes\n",
-        "# Name: Sourav Kumar\n",
-        "# Roll No: 2301201171\n",
+        "# Name: Aditya Pareek\n",
+        "# Roll No: 2301201154\n",
         "\n",
         "import pandas as pd\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
