--- a/NLP_Assignment_3-2.ipynb
+++ b/NLP_Assignment_3-2.ipynb
@@ -140,8 +140,8 @@
       ],
       "source": [
         "# Assignment 3: Sentiment Analysis using LSTM\n",
-        "# Name: Sourav Kumar\n",
-        "# Roll No: 2301201171\n",
+        "# Name: Aditya Pareek\n",
+        "# Roll No: 2301201154\n",
         "\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.datasets import imdb\n",
